    1     util  migrate to StringUtil.*
    2      sim  Move sram representation to use a Segment
    2    probe  Collapse ExceptionWatch with Watch for all segments
    1      sim  Inline SimulateAction into superclass
    2     devs  Introduce Channel class to simplify SPI and USART implem.

----------------------------------- Completed -----------------------------------------
    1     devs  Added first version of avrora.sim.state.Register             1.7.66
    1     devs  Added some utility methods to AtmelMicrocontroller           1.7.65
    1    probe  migrate to SourceMapping, remove Program.Location            1.7.42
    2     util  Extracted util.* into cck repository                         1.7.xx
    2      sim  Introduce Simulation class                                   1.5.104
    2      sim  read/write vs get/set for State                              1.5.102
    2     devs  USART abstracted to work on multiple devices                 1.5.101
    2      sim  Simplified and streamlined interrupt handling                1.5.94
  2-3    radio  Separate synch mechanism from Radio implementation           1.5.83
    1      sim  Renamed Radio.RadioPacket to Radio.Transmission              1.5.76
    2      sim  Introduced Synchronizer abstract                             1.5.75
    2    probe  Changed fireXXX() to accept only state and PC                1.5.62
    1      sim  Introduced Segment class for SRAM, flash, EEPROM             1.5.62
    2      sim  Introduce SourceMapping class                                1.5.42
    1      sim  Rename and move IOReg interface out of State                 1.5.39
    1      sim  Move timeouts out of Simulator                               1.5.39
    1    input  Added help for input formats                                 1.5.38
    1    input  Moved handling of indirect edges to ProgramReader            1.5.38
    2    probe  Migrate sleep probe to FiniteStateMachine.Probe              1.5.37